--- a/perl/projet_perl/circle_chart.html
+++ b/perl/projet_perl/circle_chart.html
@@ -38,7 +38,8 @@ function drawChart() {
     'height':400,
     'colors':
     ['#000000','#ff2d00','#00ff34','#cfd4e9'
-    ,'#757575','#f0f305','#ff9b00','#002dff']
+    ,'#757575','#f0f305','#ff9b00','#002dff'],
+    'is3D': true
   };
 
   // Display the chart inside the <div> element with id="piechart"
